[package]
name = "hid-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.3", features = ["bluetoothd", "l2cap", "rfcomm"] }
btmgmt = "0.2.5"
hid-device-class = { git = "https://github.com/eyanje/hid-device-class", version = "0.1.0" }
hid-device-configuration = { git = "https://github.com/eyanje/hid-device-configuration", version = "0.1.0" }
hid-device-id = { git = "https://github.com/eyanje/hid-device-id", version = "0.1.0" }
libc = "0.2.167"
tokio = { version = "1.41.1", features = ["net", "rt", "rt-multi-thread", "signal", "sync"] }
uds = { version = "0.4.2", features = ["tokio"] }
